--- a/diamond.css
+++ b/diamond.css
@@ -21,12 +21,30 @@ header{
     right: 20px;
     font-size: 20px;
  }
-.navmain{
+ .navmain {
+    margin: auto;
+    max-width: auto;
+    position: sticky;
+    top: 0;
+    color:white;
+    z-index: 1000;
+    width: 100%; /* Use 100% for responsive width */
+    height: 50px; /* Fixed the issue with '50 px' */
+    padding: 10px 10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background: #0427b3;
+    padding-left: 60px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.5);
+}
+/* .navmain{
     max-width:none;
     position: sticky;
     top : 0;
     z-index:1000;
-    width:100%;
+    width:auto;
+    height: fit-content;
     padding: 10px 10px;
     display : flex;
     align-items: center;
@@ -36,12 +54,13 @@ header{
     padding-left: 90px;
     padding-right: 100px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.5); 
-}
+} */
+
 .logo{
     color : white;
     font-size: 35px;
 }
-nav ul{
+/* nav ul{
     display : flex;
     gap : 30px
 }
@@ -56,7 +75,7 @@ nav ul li a{
     color : white;
     font-size: 25px;
     padding : 100px;
-}
+} */
 .button1:hover, .button2:hover {
     background-color: rgb(255, 170, 0); 
   }
@@ -70,20 +89,32 @@ nav ul li a{
     font-size: 20px;
     
 }
+.button1{
+    margin-left: 90px;
+}
 .button2{
-    margin-right: 200px;
+    margin-right: 90px;
 }
 
 header p {
     color :#747579; 
 }
-nav{
+.detail{
+    gap: 20px;
+
+}
+.nav1{
+    justify-content: space-between;
+    gap:20px;
+    padding : 20px;
+}
+.nav2{
     display:flex;
     justify-content: space-evenly;
     gap : 10px;
     background-color: #4994da;
     border-radius: 9px;
-    padding : 8px 10px;
+    padding : 8px 20px;
 }
 button {
     border : none;
@@ -92,9 +123,11 @@ button {
     background-color: transparent;
     transition : color 0.3s;
     font-size:20px;
+    color: white;
+    
 }
 button:hover{
-    color : #eeeaf5;
+    color : #0cdbf7;
 
 }
 .course-grid{
